--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 					</audio>
 		          </div>
 		          <div class="col">
-		            <a href="http://localhost/denwer/web-tzi18-09r-koshkin-asset/site/register.html">Регистрация</a>
+		            <a href="register.html">Регистрация</a>
 		          </div>
 		          <div class="col">
-		            <a href="http://localhost/denwer/web-tzi18-09r-koshkin-asset/site/enter.html">Войти</a>
+		            <a href="enter.html">Войти</a>
 		          </div>
 		        </div>
 		      </div>
