--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 					</audio>
 		          </div>
 		          <div class="col">
-		            <a href="register.html">Регистрация</a>
+		            <a href="register.html" onclick="reg()">Регистрация</a>
 		          </div>
 		          <div class="col">
-		            <a href="enter.html">Войти</a>
+		            <a href="register.html" onclick="enter()">Войти</a>
 		          </div>
 		        </div>
 		      </div>
@@ -67,6 +67,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="bootstrap-4.3.1-dist\js\bootstrap.min.js"></script>
   <script src="anime-master\lib\anime.min.js"></script>
-  <script src="scripts\main.js"></script>
+  <script type="text/javascript" src="scripts\main.js"></script>
+  <script type="text/javascript" src="scripts\regis-scripts.js"></script>
 </body>
 </html>
