--- a/register.html
+++ b/register.html
@@ -13,27 +13,49 @@
 <body>
 
   <div class="menu"><center><img src="images/logo-3.png"></center></div>
-
-  <form action="Register_login.php" method="post">
-    <label>
-      <p class="label-txt">введите никнейм</p>
-      <input name="name" type="text" class="input">
-      <div class="line-box">
-        <div class="line"></div>
-      </div>
-    </label>
-    <br>
-    <label>
-      <p class="label-txt">введите пароль</p>
-      <input name="password" type="text" class="input">
-      <div class="line-box">
-        <div class="line" ></div>
-      </div>
-    </label>
-    <br>
-    <button type="submit">создать</button>
-  </form>
-  
+ 
+  <div id="Register">
+    <form action="Register_login.php" method="post">
+      <label>
+        <p class="label-txt">введите никнейм</p>
+        <input name="name" type="text" class="input">
+        <div class="line-box">
+          <div class="line"></div>
+        </div>
+      </label>
+      <br>
+      <label>
+        <p class="label-txt">введите пароль</p>
+        <input name="password" type="text" class="input">
+        <div class="line-box">
+          <div class="line" ></div>
+        </div>
+      </label>
+      <br>
+      <button type="submit">создать</button>
+    </form>
+  </div>
+  <div id="enter">
+    <form action="Enter.php" method="post">
+      <label>
+        <p class="label-txt">введите никнейм</p>
+        <input name="name" type="text" class="input">
+        <div class="line-box">
+          <div class="line"></div>
+        </div>
+      </label>
+      <br>
+      <label>
+        <p class="label-txt">введите пароль</p>
+        <input name="password" type="text" class="input">
+        <div class="line-box">
+          <div class="line" ></div>
+        </div>
+      </label>
+      <br>
+      <button type="submit">войти</button>
+    </form>
+  </div>
     <script type="text/javascript" src="scripts\regis-scripts.js"></script>
 </body>
 
