--- a/register.html
+++ b/register.html
@@ -14,7 +14,7 @@
 
   <div class="menu"><center><img src="images/logo-3.png"></center></div>
  
-  <div id="Register">
+  <div id="register-window">
     <form action="Register_login.php" method="post">
       <label>
         <p class="label-txt">введите никнейм</p>
@@ -42,7 +42,7 @@
     </form>
   </div>
 
-  <div id="enter">
+  <div id="enter-window">
     <form action="Enter.php" method="post">
       <label>
         <p class="label-txt">введите никнейм</p>
