--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Асет Кошкын</title>
+  <link rel="stylesheet" type="text/css" href="styles/regis-style.css">
   <link rel="stylesheet" type="text/css" href="styles\style.css">
   <link rel="stylesheet" href="bootstrap-4.3.1-dist\css\bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -12,8 +13,6 @@
 
 <body>
 
-	
-  
 	<section class="menu">
 		<div class="container-fluid">
 		  <div class="row">
@@ -32,10 +31,10 @@
 					</audio>
 		          </div>
 		          <div class="col">
-		            <a href="register.html" onclick="reg()">Регистрация</a>
+		            <a href="register.html">Регистрация</a>
 		          </div>
 		          <div class="col">
-		            <a href="register.html" onclick="enter()">Войти</a>
+		            <a href="enter.html">Войти</a>
 		          </div>
 		        </div>
 		      </div>
@@ -61,6 +60,7 @@
 
 	  </div>
 	</section>
+	
 	
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
