--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
 		<div class="crawl">
 			<div class="title">
 		  		<p>Кошкын Асет</p>
-		  		<h1>Сайт обо мне</h1>
+		  		<h1>Сайт о всяком таком</h1>
 		</div>
 	    
-	    <p>Добро пожаловать в мою обитель. Я - Асет. 17 лет. Quanti canicula ille in fenestra - мой девиз. И этот сайт посвещён обо мне.</p>
+	    <p>Добро пожаловать в мою обитель. Я - АСЕТ. Quanti canicula ille in fenestra - мой девиз. И этот сайт посвещён о всяком таком.</p>
 	      
-	    <p>Вы получите незабываемый опыт моей жизни, которая ещё продолжается, кстати говоря. Возможно, в далеком будущем эти сакральные записи откопают потомки. Или их прочтут даже внеземеные существа в поисках ответа на главный вопрос Жизни, Вселенной и Вообще. Если вы за этим, рептилоиды, то ответ 42. А теперь давайте не отвлекатся по пустикам и поговорим обо мне.</p>
+	    <p>Я поведаю вам о всяких штуках, которые я хочу вам рассказать. Возможно, в далеком будущем эти сакральные записи откопают потомки. Или их прочтут даже внеземеные существа в поисках ответа на главный вопрос Жизни, Вселенной и Вообще. Если вы за этим, рептилоиды, то ответ 42. А теперь давайте не отвлекатся по пустикам и поговорим о всяком.</p>
 
-	    <p>Как вы уже поняли, я проведу вас в кроличью нору. И насколько она глубока вы сами решаете. Все таки дело добровольное и никто ни кого не заставляет втягиваться в дебри моего разума. Да и этого не ожидайте. Я тут ради мемов и лулзов.</p>
+	    <p>Как вы уже поняли, я проведу вас в кроличью нору. И насколько она глубока вы сами решаете. Все таки дело добровольное и никто ни кого не заставляет читать что-то высокое. Да и этого не ожидайте. Я тут ради мемов и лулзов.</p>
 
-	    <p>Я здесь не Толстой, чтобы устраивать всемирный потом, поэтому придежите ваши ковчеги и ораву животных. Вообщем буду стараться держать легкую атмосферу повествовани, а вас в полусознательном состоянии. Для начала создайте учетную запись. И читайте мои священные рукописи...</p>
+	    <p>Я здесь не Толстой, чтобы устраивать всемирный потоп, поэтому постараюсь быть краток (Но не обещаю). Вообщем буду стараться держать легкую атмосферу повествования, а вас в полусознательном. Для начала создайте учетную запись. И можете наслаждаться чтением...</p>
 
 	  </div>
 	</section>
