Текст плавно исчезает и повторяет анимацию

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		  </div>
 		</div>
 	</section>
-
+	<div class="end-of-text"></div>
 	<section class="star-wars">
 		<div class="crawl">
 			<div class="title">
