Поменял плавность и регистрацию

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					</audio>
 		          </div>
 		          <div class="col">
-		            <a href="register.html">Регистрация</a>
+		            <a href="register.html">Создать</a>
 		          </div>
 		          <div class="col">
 		            <a href="enter.html">Войти</a>
