--- a/enter.html
+++ b/enter.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   
-  <title>Регистрация</title>
+  <title>Авторизация</title>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="styles/regis-style.css">
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
