--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Асет Кошкын</title>
   <link rel="stylesheet" type="text/css" href="styles\style.css">
-  <link rel="stylesheet" href="bootstrap-4.3.1-dist\css\bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 
@@ -25,15 +25,15 @@
 		      <div class="list">
 		        <div class="row">
 		          <div class="col">
-		            <audio autoplay controls="" loop="">
+		            <audio autoplay  loop="">
 				        <source src="audios\sound-intro.mp3">
 					</audio>
 		          </div>
 		          <div class="col">
-		            <a href="register.html">Создать</a>
+		            <a href="http://localhost/denwer/web-tzi18-09r-koshkin-asset/site/register.html">Создать</a>
 		          </div>
 		          <div class="col">
-		            <a href="enter.html">Войти</a>
+		            <a href="http://localhost/denwer/web-tzi18-09r-koshkin-asset/site/enter.html">Войти</a>
 		          </div>
 		        </div>
 		      </div>
