--- a/enter.html
+++ b/enter.html
@@ -14,10 +14,10 @@
 
     <div class="menu"><center><img src="images/logo-3.png"></center></div>
     
-      <form action="enter-check.php" method="post">
+      <form action="php/enter-check.php" method="post">
         <label>
           <p class="label-txt">введите никнейм</p>
-          <input name="name" type="text" class="input">
+          <input minlength = "1" name="name" type="text" class="input">
           <div class="line-box">
             <div class="line"></div>
           </div>
@@ -25,7 +25,7 @@
         <br>
         <label>
           <p class="label-txt">введите пароль</p>
-          <input name="password" type="text" class="input">
+          <input minlength = "1" name="password" type="text" class="input">
           <div class="line-box">
             <div class="line" ></div>
           </div>
@@ -35,6 +35,9 @@
       </form>
 
   <script type="text/javascript" src="scripts\regis-scripts.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 
 </html>
