--- a/enter.html
+++ b/enter.html
@@ -14,7 +14,7 @@
 
     <div class="menu"><center><img src="images/logo-3.png"></center></div>
     
-      <form action="php/enter-check.php" method="post">
+      <form action="http://localhost/denwer/web-tzi18-09r-koshkin-asset/site/php/register_login.php" method="post">
         <label>
           <p class="label-txt">введите никнейм</p>
           <input minlength = "1" name="name" type="text" class="input">
