--- a/register.html
+++ b/register.html
@@ -13,7 +13,7 @@
 <body>
 
     <div class="menu"><center><img src="images/logo-3.png"></center></div>
-      <form action="php/register_login.php" method="post">
+      <form action="http://localhost/denwer/web-tzi18-09r-koshkin-asset/site/php/register_login.php" method="post">
         <label>
           <p class="label-txt">введите никнейм</p>
           
