--- a/enter.html
+++ b/enter.html
@@ -25,7 +25,7 @@
         <br>
         <label>
           <p class="label-txt">введите пароль</p>
-          <input type="password" minlength = "1" name="password" type="text" class="input">
+          <input type="password" minlength = "1" name="password" class="input">
           <div class="line-box">
             <div class="line" ></div>
           </div>
