--- a/register.html
+++ b/register.html
@@ -28,7 +28,7 @@
         <label>
           <p class="label-txt">введите пароль</p>
           
-          <input type="password" minlength ="1" name="password" type="text" class="input">
+          <input type="password" minlength ="1" name="password"  class="input">
           
           <div class="line-box">
             <div class="line" ></div>
